# bevy_auto_plugin

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  MIGRATIONS.md  README.md  build.rs  migrations.md  rustfmt.toml
crates/bevy_auto_plugin_nightly_shared/: Cargo.toml
crates/bevy_auto_plugin_nightly_shared/src/: lib.rs
crates/bevy_auto_plugin_proc_macros/: Cargo.toml  build.rs
crates/bevy_auto_plugin_proc_macros/docs/proc_attributes/: auto_add_plugin.md  auto_add_system.md  auto_bind_plugin.md  auto_component.md  auto_configure_system_set.md  auto_configure_system_set_config.md  auto_event.md  auto_init_resource.md  auto_init_sub_state.md  auto_name.md  auto_observer.md  auto_register_type.md  auto_resource.md  auto_run_on_build.md  auto_sub_states.md  auto_system.md
crates/bevy_auto_plugin_proc_macros/src/: lib.rs
crates/bevy_auto_plugin_proc_macros/src/docs/flat_file/: auto_add_event.md  auto_add_message.md  auto_add_observer.md  auto_add_system.md  auto_init_resource.md  auto_init_state.md  auto_insert_resource.md  auto_name.md  auto_plugin.md  auto_register_state_type.md  auto_register_type.md
crates/bevy_auto_plugin_proc_macros/src/docs/global/: auto_add_event.md  auto_add_message.md  auto_add_observer.md  auto_add_system.md  auto_init_resource.md  auto_init_state.md  auto_insert_resource.md  auto_name.md  auto_plugin.md  auto_register_state_type.md  auto_register_type.md  derive_auto_plugin.md
crates/bevy_auto_plugin_proc_macros/src/docs/module/: auto_add_event.md  auto_add_message.md  auto_add_observer.md  auto_add_system.md  auto_init_resource.md  auto_init_state.md  auto_insert_resource.md  auto_name.md  auto_plugin.md  auto_register_state_type.md  auto_register_type.md
crates/bevy_auto_plugin_proc_macros/src/docs/proc_attributes/: auto_add_message.md  auto_add_system.md  auto_init_state.md  auto_insert_resource.md  auto_name.md  auto_plugin.md  auto_register_state_type.md  auto_system.md  derive_auto_plugin.md
crates/bevy_auto_plugin_shared/: Cargo.toml
crates/bevy_auto_plugin_shared/src/: attribute.rs  attribute_args.rs  bevy_app_code_gen.rs  context.rs  item_with_attr_match.rs  lib.rs  target.rs  type_list.rs  util.rs
crates/bevy_auto_plugin_shared/src/__private/: attribute.rs  attribute_args.rs  auto_plugin_registry.rs  bevy_app_code_gen.rs  context.rs  expr_path_or_call.rs  expr_value.rs  flag_or_list.rs  flag_or_meta.rs  generics.rs  ident_or_path_with_ident.rs  inner.rs  item_with_attr_match.rs  mod.rs  non_empty_path.rs  target.rs  trigger_arg.rs  trigger_type_arg.rs  type_list.rs
crates/bevy_auto_plugin_shared/src/__private/attribute_args/: mod.rs  schedule_config.rs
crates/bevy_auto_plugin_shared/src/__private/macros/: mod.rs
crates/bevy_auto_plugin_shared/src/__private/modes/: mod.rs
crates/bevy_auto_plugin_shared/src/__private/util/: combo.rs  concrete_path.rs  debug.rs  env.rs  fn_param.rs  generics.rs  generics_traits.rs  item.rs  local_file.rs  mod.rs  module.rs  path_fmt.rs  resolve_ident_from_item.rs  test_params.rs  tokens.rs  ty_classify.rs
crates/bevy_auto_plugin_shared/src/codegen/: emit.rs  mod.rs  tokens.rs  with_target_path.rs
crates/bevy_auto_plugin_shared/src/flat_file/: attribute.rs  file_state.rs  inner.rs
crates/bevy_auto_plugin_shared/src/global/: inner.rs  mod.rs
crates/bevy_auto_plugin_shared/src/inline/: attribute.rs  file_state.rs  inner.rs  mod.rs
crates/bevy_auto_plugin_shared/src/macro_api/: app_mutation_emitter.rs  attr_expansion_emitter.rs  composed.rs  context.rs  global_args.rs  input_item.rs  macro_paths.rs  mod.rs  q.rs  qq.rs  rewrite_q.rs  schedule_config.rs  with_plugin.rs
crates/bevy_auto_plugin_shared/src/macro_api/attributes/: auto_add_message.rs  auto_add_observer.rs  auto_add_system.rs  auto_auto_name.rs  auto_component.rs  auto_event.rs  auto_init_resource.rs  auto_init_state.rs  auto_insert_resource.rs  auto_message.rs  auto_observer.rs  auto_plugin.rs  auto_register_state_type.rs  auto_register_type.rs  auto_resource.rs  auto_states.rs  auto_system.rs  mod.rs
crates/bevy_auto_plugin_shared/src/macro_api/context/: macro_paths.rs  mod.rs
crates/bevy_auto_plugin_shared/src/macro_api/derives/: auto_plugin.rs  mod.rs
crates/bevy_auto_plugin_shared/src/macro_api/emitters/: app_mutation.rs  attr.rs  attr_expansion.rs  mod.rs
crates/bevy_auto_plugin_shared/src/macro_api/mixins/: mod.rs  nothing.rs  with_plugin.rs
crates/bevy_auto_plugin_shared/src/macros/: mod.rs
crates/bevy_auto_plugin_shared/src/modes/flat_file/: attribute.rs  file_state.rs  inner.rs
crates/bevy_auto_plugin_shared/src/modes/global/: inner.rs  mod.rs
crates/bevy_auto_plugin_shared/src/modes/module/: inner.rs
crates/bevy_auto_plugin_shared/src/module/: attribute.rs  inner.rs  mod.rs
crates/bevy_auto_plugin_shared/src/syntax/: mod.rs
crates/bevy_auto_plugin_shared/src/syntax/analysis/: fn_meta.rs  fn_param.rs  item.rs  mod.rs  path.rs  ty_classify.rs
crates/bevy_auto_plugin_shared/src/syntax/ast/: any_expr.rs  any_expr_list.rs  expr_path_or_call.rs  expr_value.rs  flag.rs  flag_or_expr.rs  flag_or_list.rs  flag_or_lit.rs  flag_or_meta.rs  mod.rs  type_list.rs
crates/bevy_auto_plugin_shared/src/syntax/diagnostic/: kind.rs  mod.rs  span.rs
crates/bevy_auto_plugin_shared/src/syntax/extensions/: generics.rs  item.rs  lit.rs  mod.rs  path.rs
crates/bevy_auto_plugin_shared/src/syntax/parse/: from_meta.rs  item.rs  mod.rs  rewrite.rs  scrub_helpers.rs
crates/bevy_auto_plugin_shared/src/syntax/traits/: generics.rs
crates/bevy_auto_plugin_shared/src/syntax/validated/: concrete_path.rs  generics.rs  mod.rs  (+2 more)
crates/bevy_auto_plugin_shared/src/test_util/: combo.rs  macros.rs  mod.rs  test_params.rs
crates/bevy_auto_plugin_shared/src/util/: after_drop.rs  concrete_path.rs  debug.rs  emit_guard.rs  fn_param.rs  generics.rs  generics_traits.rs  item.rs  item_fn.rs  local_file.rs  macros.rs  mod.rs  module.rs  path_fmt.rs  struct_or_enum_ref.rs  test_params.rs
crates/internal_test_util/: Cargo.toml
crates/internal_test_util/src/: lib.rs  token_stream.rs  ui_util.rs  wasm.rs
(+410 files in other folders)
