[package]
name = "bevy_auto_plugin"
version = "0.6.3"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin"
license = "MIT OR Apache-2.0"
description = "Procedural attribute macros for Bevy apps that reduce boilerplate by automatically registering components, resources, events, states, and systems in your plugin's build function."
edition = "2024"
rust-version = "1.88"
publish = true

[features]
default = [
    "mode_global",
]
all_modes = [
    "mode_global",
    "mode_flat_file",
    "mode_module"
]
# consider also enabling `lang_server_noop`
mode_flat_file = [
    "bevy_auto_plugin_proc_macros/mode_flat_file",
    "bevy_auto_plugin_shared/mode_flat_file",
]
mode_module = [
    "bevy_auto_plugin_proc_macros/mode_module",
    "bevy_auto_plugin_shared/mode_module",
]
mode_global = [
    "bevy_auto_plugin_proc_macros/mode_global",
    "bevy_auto_plugin_shared/mode_global",
]
inventory = ["bevy_auto_plugin_proc_macros/inventory"]
# optional extras
log_plugin_build = ["bevy_auto_plugin_proc_macros/log_plugin_build"]
# Flat file options
flat_file_missing_auto_plugin_is_compile_error = ["bevy_auto_plugin_proc_macros/flat_file_missing_auto_plugin_is_compile_error"]
flat_file_missing_auto_plugin_is_error = ["bevy_auto_plugin_proc_macros/flat_file_missing_auto_plugin_is_error"]
flat_file_missing_auto_plugin_is_warning = ["bevy_auto_plugin_proc_macros/flat_file_missing_auto_plugin_is_warning"]
# This "hack" will check the current executable from the env
#   when exe file_stem (without extension) != `rustc` - allows the macros to act like a no-op on failure to resolve `local_file`
#   required for use in many IDE's until these stubs get fully implemented: https://github.com/rust-lang/rust/blob/4e973370053a5fe87ee96d43c506623e9bd1eb9d/src/tools/rust-analyzer/crates/proc-macro-srv/src/server_impl/rust_analyzer_span.rs#L144-L147
flat_file_lang_server_noop = ["bevy_auto_plugin_proc_macros/flat_file_lang_server_noop"]
# see https://github.com/StrikeForceZero/bevy_auto_plugin/issues/19
ignore_flat_file_or_module_deprecation = ["bevy_auto_plugin_proc_macros/ignore_flat_file_or_module_deprecation"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy_auto_plugin_shared = { version = "0.6.3", path = "crates/bevy_auto_plugin_shared" }
bevy_auto_plugin_proc_macros = { version = "0.6.3", path = "crates/bevy_auto_plugin_proc_macros" }
internal_test_util = { path = "crates/internal_test_util" }
internal_test_proc_macro = { path = "crates/internal_test_proc_macro" }
bevy = { version = "0.17", default-features = false, features = ["bevy_state"] }
bevy_app = { version = "0.17", default-features = false }
bevy_log = { version = "0.17", default-features = false }
bevy_state = { version = "0.17" }
bevy_reflect = { version = "0.17" }
bevy_reflect_derive = { version = "0.17" }
bevy_internal = { version = "0.17" }
bevy_ecs = { version = "0.17" }
bevy_ecs_macros = { version = "0.17" }
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
anyhow = "1"
thiserror = "2"
log = "0.4"
smart-default = { version = "0.7" }
darling = "0.21"
inventory = "0.3"
linkme = "0.3"
trybuild = "1.0"
wasm-bindgen-test = { version = "0.3" }
proc-macro-crate = { version = "3.4" }

[dependencies]
bevy_auto_plugin_proc_macros = { workspace = true }
bevy_auto_plugin_shared = { workspace = true }

[dev-dependencies]
# required for doc tests
bevy = { workspace = true }
bevy_app = { workspace = true }
bevy_reflect = { workspace = true }
bevy_reflect_derive = { workspace = true }
bevy_ecs = { workspace = true }
bevy_ecs_macros = { workspace = true }
bevy_state = { workspace = true }
trybuild = { workspace = true }
# used in feature tests
log = { workspace = true }
wasm-bindgen-test = { workspace = true }
internal_test_util = { workspace = true }
internal_test_proc_macro = { workspace = true }

[build-dependencies]
rustc_version = "0.4"
cfg_aliases = "0.2"