[package]
name = "bevy_auto_plugin"
version = "0.8.2"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin"
license = "MIT OR Apache-2.0"
description = "Procedural attribute macros for Bevy apps that reduce boilerplate by automatically registering components, resources, events, states, and systems in your plugin's build function."
edition = "2024"
publish = true

[features]
default = [
    "debug_log_plugin_registry",
]
inventory = ["bevy_auto_plugin_proc_macros/inventory"]
# optional extras
debug_log_plugin_registry = ["bevy_auto_plugin_proc_macros/debug_log_plugin_registry", "bevy_auto_plugin_shared/debug_log_plugin_registry"]
log_plugin_build = ["bevy_auto_plugin_proc_macros/log_plugin_build"]
web = [
    "bevy_auto_plugin_shared/web",
]
# internal for tests
_wasm = [
    "web",
    "bevy_auto_plugin_shared/_web",
    "internal_test_util/_web",
    "bevy/web",
    "bevy_app/web",
    "bevy_reflect/web",
]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
bevy_auto_plugin_shared = { version = "0.8.2", path = "crates/bevy_auto_plugin_shared" }
bevy_auto_plugin_proc_macros = { version = "0.8.2", path = "crates/bevy_auto_plugin_proc_macros" }
internal_test_util = { path = "crates/internal_test_util" }
internal_test_proc_macro = { path = "crates/internal_test_proc_macro" }
bevy = { version = "0.18", default-features = false, features = ["bevy_state"] }
bevy_app = { version = "0.18", default-features = false }
bevy_state = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_reflect_derive = { version = "0.18", default-features = false }
bevy_internal = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false }
bevy_ecs_macros = { version = "0.18", default-features = false }
proc-macro2 = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
quote = "1"
anyhow = "1"
thiserror = "2"
log = "0.4"
smart-default = { version = "0.7" }
darling = "0.21"
inventory = "0.3"
linkme = "0.3"
trybuild = "1.0"
wasm-bindgen-test = { version = "0.3" }
proc-macro-crate = { version = "3.4" }

[dependencies]
bevy_auto_plugin_proc_macros = { workspace = true }
bevy_auto_plugin_shared = { workspace = true }

[dev-dependencies]
# required for doc tests
bevy = { workspace = true }
bevy_app = { workspace = true }
bevy_reflect = { workspace = true }
bevy_reflect_derive = { workspace = true }
bevy_ecs = { workspace = true }
bevy_ecs_macros = { workspace = true }
bevy_state = { workspace = true }
trybuild = { workspace = true }
# used in feature tests
log = { workspace = true }
wasm-bindgen-test = { workspace = true }
internal_test_util = { workspace = true }
internal_test_proc_macro = { workspace = true }
meta_merge = "0.1.1"

[build-dependencies]
rustc_version = "0.4"
cfg_aliases = "0.2"