[package]
name = "bevy_auto_plugin_proc_macros"
version = "0.7.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin/crates/bevy_auto_plugin_proc_macros"
license = "MIT OR Apache-2.0"
description = "proc macros for bevy_auto_plugin"
edition = "2024"
publish = true

[lib]
proc-macro = true

[features]
mode_flat_file = ["bevy_auto_plugin_shared/mode_flat_file", "bevy_auto_plugin/mode_flat_file"]
mode_module = ["bevy_auto_plugin_shared/mode_module", "bevy_auto_plugin/mode_module"]
mode_global = ["bevy_auto_plugin_shared/mode_global", "bevy_auto_plugin/mode_global"]
inventory = ["bevy_auto_plugin_shared/inventory"]
debug_log_plugin_registry = ["bevy_auto_plugin_shared/debug_log_plugin_registry"]
log_plugin_build = ["bevy_auto_plugin_shared/log_plugin_build"]
flat_file_missing_auto_plugin_check = ["bevy_auto_plugin_shared/flat_file_missing_auto_plugin_check"]
flat_file_missing_auto_plugin_is_compile_error = ["bevy_auto_plugin_shared/flat_file_missing_auto_plugin_check"]
flat_file_missing_auto_plugin_is_error = ["bevy_auto_plugin_shared/flat_file_missing_auto_plugin_check", "bevy_auto_plugin_shared/log"]
flat_file_missing_auto_plugin_is_warning = ["bevy_auto_plugin_shared/flat_file_missing_auto_plugin_check", "bevy_auto_plugin_shared/log"]
flat_file_lang_server_noop = ["bevy_auto_plugin_shared/flat_file_lang_server_noop"]
ignore_flat_file_or_module_deprecation = []

[dependencies]
bevy_auto_plugin_shared = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
# needed for doc-tests
bevy = { workspace = true }
bevy_app = { workspace = true }
bevy_auto_plugin = { path = "../../.", default-features = false }