[package]
name = "bevy_auto_plugin_proc_macros"
version = "0.8.2"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin/crates/bevy_auto_plugin_proc_macros"
license = "MIT OR Apache-2.0"
description = "proc macros for bevy_auto_plugin"
edition = "2024"
publish = true

[lib]
proc-macro = true

[features]
default = ["bevy_0_18"]
bevy_0_17 = ["bevy_auto_plugin_shared/bevy_0_17"]
bevy_0_18 = ["bevy_auto_plugin_shared/bevy_0_18"]
inventory = ["bevy_auto_plugin_shared/inventory"]
debug_log_plugin_registry = ["bevy_auto_plugin_shared/debug_log_plugin_registry"]
log_plugin_build = ["bevy_auto_plugin_shared/log_plugin_build"]

[dependencies]
bevy_auto_plugin_shared = { workspace = true }
proc-macro2 = { workspace = true }