[package]
name = "bevy_auto_plugin_proc_macros"
version = "0.9.1"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin/crates/bevy_auto_plugin_proc_macros"
license = "MIT OR Apache-2.0"
description = "proc macros for bevy_auto_plugin"
edition = "2024"
publish = true
build = "build.rs"
include = ["src/**", "Cargo.toml", "build.rs", "docs_gen/**"]

[lib]
proc-macro = true

[features]
inventory = ["bevy_auto_plugin_shared/inventory"]
debug_log_plugin_registry = ["bevy_auto_plugin_shared/debug_log_plugin_registry"]
log_plugin_build = ["bevy_auto_plugin_shared/log_plugin_build"]
# This feature will eventually be removed unless a petition is opened.
compat_generics_angles = ["bevy_auto_plugin_shared/compat_generics_angles"]
default_plugin = ["bevy_auto_plugin_shared/default_plugin"]

[dependencies]
bevy_auto_plugin_shared = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
# needed for doc-tests
bevy = { workspace = true }
bevy_app = { workspace = true }
bevy_auto_plugin = { path = "../../.", default-features = false }
