[package]
name = "bevy_auto_plugin_shared"
version = "0.4.0"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin/crates/bevy_auto_plugin_shared"
license = "MIT OR Apache-2.0"
description = "shared lib for bevy_auto_plugin"
edition = "2024"
publish = true

[lib]

[features]
mode_flat_file = []
mode_module = []
mode_global = []
inventory = []
log_plugin_build = ["log"]
flat_file_missing_auto_plugin_check = []
flat_file_missing_auto_plugin_is_compile_error = ["flat_file_missing_auto_plugin_check"]
flat_file_missing_auto_plugin_is_error = ["flat_file_missing_auto_plugin_check", "log"]
flat_file_missing_auto_plugin_is_warning = ["flat_file_missing_auto_plugin_check", "log"]
flat_file_lang_server_noop = []

[dependencies]
bevy_app = { workspace = true }
bevy_reflect = { workspace = true }
bevy_reflect_derive = { workspace = true }
bevy_ecs = { workspace = true }
bevy_ecs_macros = { workspace = true }
bevy_state = { workspace = true }
bevy_log = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true, optional = true }
darling = { workspace = true }
smart-default = { workspace = true }
linkme = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
internal_test_proc_macro = { workspace = true }
internal_test_util = { workspace = true }
wasm-bindgen-test = { workspace = true }