[package]
name = "bevy_auto_plugin_shared"
version = "0.7.1"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin/crates/bevy_auto_plugin_shared"
license = "MIT OR Apache-2.0"
description = "shared lib for bevy_auto_plugin"
edition = "2024"
publish = true

[lib]

[features]
inventory = []
allow_on_use_statements = []
debug_log_plugin_registry = ["log"]
log_plugin_build = ["log"]
web = [
    "bevy_app/web"
]
# internal for tests
_web = [
    "web",
    "internal_test_util/_web",
    "bevy_reflect/web"
]

[dependencies]
bevy_app = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true, optional = true }
darling = { workspace = true }
smart-default = { workspace = true }
linkme = { workspace = true }
inventory = { workspace = true }
proc-macro-crate = { workspace = true }

[dev-dependencies]
internal_test_proc_macro = { workspace = true }
internal_test_util = { workspace = true }
wasm-bindgen-test = { workspace = true }
anyhow = { workspace = true }
# used in crate resolve tests
bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
bevy_state = { workspace = true }