[package]
name = "bevy_auto_plugin_shared"
version = "0.8.2"
authors = ["Brett Striker <strikeforcezero@gmail.com>"]
repository = "https://github.com/StrikeForceZero/bevy_auto_plugin/crates/bevy_auto_plugin_shared"
license = "MIT OR Apache-2.0"
description = "shared lib for bevy_auto_plugin"
edition = "2024"
publish = true

[lib]

[features]
default = ["bevy_0_18"]
bevy_0_17 = [
    "dep:bevy_app_0_17",
    "dep:bevy_ecs_0_17",
    "dep:bevy_reflect_0_17",
    "dep:bevy_state_0_17"
]
bevy_0_18 = [
    "dep:bevy_app",
    "dep:bevy_ecs",
    "dep:bevy_reflect",
    "dep:bevy_state"
]
inventory = []
debug_log_plugin_registry = ["log"]
log_plugin_build = ["log"]
web = [
    "bevy_app/web"
]
# internal for tests
_web = [
    "web",
    "internal_test_util/_web",
    "bevy_reflect/web"
]

[dependencies]
bevy_app_0_17 = { workspace = true, optional = true }
bevy_ecs_0_17 = { workspace = true, optional = true }
bevy_reflect_0_17 = { workspace = true, optional = true }
bevy_state_0_17 = { workspace = true, optional = true }

bevy_app = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
bevy_state = { workspace = true, optional = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true, optional = true }
darling = { workspace = true }
smart-default = { workspace = true }
linkme = { workspace = true }
inventory = { workspace = true }
proc-macro-crate = { workspace = true }

[dev-dependencies]
internal_test_proc_macro = { workspace = true }
internal_test_util = { workspace = true }
wasm-bindgen-test = { workspace = true }
anyhow = { workspace = true }
# used in crate resolve tests
# these are now handled via versioned features in [dependencies]