[package]
name = "internal_test_util"
version = "0.0.0"
edition = "2024"
publish = false

[lib]

[dependencies]
bevy_app = { workspace = true }
bevy_internal = { workspace = true }
internal_test_proc_macro = { workspace = true }
trybuild = { workspace = true }
darling = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }