[package]
name = "internal_test_util"
version = "0.0.0"
edition = "2024"
publish = false

[lib]

[features]
bevy_0_17 = ["dep:bevy_app_0_17", "dep:bevy_internal_0_17"]
bevy_0_18 = []
# internal for tests
_web = [
    "bevy_app/web",
    "bevy_internal/web"
]

[dependencies]
bevy_app_0_17 = { workspace = true, optional = true }
bevy_internal_0_17 = { workspace = true, optional = true }
bevy_app = { workspace = true }
bevy_internal = { workspace = true }
internal_test_proc_macro = { workspace = true }
trybuild = { workspace = true }
darling = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }